--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "gibaapi",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "type": "cjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js",
+    "dev": "ts-node --esm src/app.ts",
+    "build": "tsc",
+    "compile": "tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -11,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/connect-mongodb-session": "^2.4.7",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
@@ -18,13 +23,20 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
     "@types/nodemailer": "^6.4.17",
+    "@types/nodemon": "^1.19.6",
     "bcrypt": "^5.1.1",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
