--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "vercel": "^41.4.1"
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
